# Cyberpanel-Server-Wizard-Cleanup

./: .gitignore  CHANGELOG.md  ISSUE_GUIDE.md  README.md  RENAME_INSTRUCTIONS.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
ai_wizard/: __init__.py  agent.py  cli.py  config.py  evidence.py  severity.py
ai_wizard/agent/: __init__.py  loop.py
ai_wizard/core/: __init__.py  history.py  models.py  provider_base.py  react.py
ai_wizard/logging/: __init__.py  setup.py
ai_wizard/providers/: __init__.py  anthropic_provider.py  openai_provider.py
ai_wizard/remediation/: __init__.py  executor.py
ai_wizard/reporting/: __init__.py  advice.py  formatter.py  json_export.py
ai_wizard/scanners/: __init__.py  base.py  cron_services.py  encrypted_files.py  file_paths.py  kinsing_family.py  malware_indicators.py  processes.py  ssh_keys.py  users.py  yara_scan.py
ai_wizard/security/: __init__.py  limits.py  sandbox.py
ai_wizard/tools/: __init__.py  file_ops.py  registry.py  (+5 more)
cyberzard/: MIGRATION.md  __init__.py  agent.py  chat.py  cli.py  config.py  email_execute.py  evidence.py  n8n_setup.py  remediation.py  reporting.py  tools.py  tui.py  ui.py
docs/: README.md  ai_and_agent.md  architecture.md  astro.config.mjs  commands.md  configuration.md  email_commands.md  faq.md  installation.md  package-lock.json  package.json  remediation.md  roadmap.md  security.md  tsconfig.json
scripts/: advanced_wizard_cleanup.sh  generate_command_docs.py  install.sh  wizard_cleanup.sh
tests/: conftest.py  test_no_legacy_imports.py
(+58 files in other folders)
