[project]
# Renamed from cyberpanel-ai-wizard to cyberzard
name = "cyberzard"
version = "0.1.0"
description = "AI-assisted CyberPanel server scanner and remediation CLI"
authors = [ {name = "CyberPanel Wizard"} ]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["security","malware","cyberpanel","cli","ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: System Administrators",
  "Topic :: Security"
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "psutil>=5.9.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/elwizard33/Cyberpanel-Server-Wizard-Cleanup"
Source = "https://github.com/elwizard33/Cyberpanel-Server-Wizard-Cleanup"
Issues = "https://github.com/elwizard33/Cyberpanel-Server-Wizard-Cleanup/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.29.0"]
openai = ["openai>=1.0.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
cyberzard = "ai_wizard.cli:app"
cp-ai-wizard = "ai_wizard.cli:app"  # legacy alias

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"
